# dfit

./: .coveragerc  .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  README.rst  azure-pipelines.yml  pyproject.toml  setup.cfg  setup.py  versioneer.py
src/dfit/: __init__.py  _version.py  dfit.cpp  dfit.pyx  interrupt.pxi  interrupt.py.README
src/dfit/tests/: conftest.py  test_dfit.py
utils/: benchmark.py
