[metadata]
name = dfit
# version = file: tslogs/_version.txt
author = Ashutosh Varma
author-email = ashutoshvarma11@live.com
home-page = https://github.com/ashutoshvarma/dfit
description = Python library for distribution fitting
long-description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = GPLv3
license-file = COPYING
platform = any
keywords = distribution, probability, scipy, fit, fitting, goodness of fit
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3),
    Programming Language :: Cython,
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/ashutoshvarma/dfit/issues
    Changelog = https://dfit.readthedocs.io/en/latest/changes.html
    Documentation = https://dfit.readthedocs.io/en/latest/

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
package_dir=
    =src
packages=find:
        # where=src
# packages =
    # tslogs
# test_suite = tests
setup_requires =
    setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
    cython >= 0.29.21
    numpy     
    wheel
install_requires =
    scipy>=1.5.4
    joblib>=0.17.0
    matplotlib
    pandas
    numpy

[options.packages.find]
where=src

[options.extras_require]
doc =
    sphinx
test =
    coverage
    pytest
    pytest-cov
all =
    %(doc)s
    %(test)s


# [options.entry_points]
# console_scripts =
#     tslogs = tslogs.__main__:main


[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[flake8]
max-line-length = 88
extend-ignore = E203
exclude =  .git, .eggs, __pycache__, docs/, build/, dist/, .venv

[tool:pytest]
addopts = -vv --strict-markers
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')

[versioneer]
VCS = git
style = pep440
versionfile_source = src/dfit/_version.py
versionfile_build = dfit/_version.py
tag_prefix =
parentdir_prefix = dfit-
